ozone/drm: Don't use RGBA framebuffers with legacy KMS

With CL:801974 we started using RGBA for primary framebuffers so that
the alpha channel will be well-defined. Boards without atomic
modesetting should not use overlays and scanout the primary
framebuffer as RGB, but this didn't quite work. We tried to modeset
and pageflip to RGBA buffers on boards with RGB-only overlays (peppy).

This commit makes sure that we always pick the opaque framebuffer for
the lowest plane.

Bug: 821944, b/74997524
Change-Id: I79929d59bc8a568d7a6090a3ab5a4b31fad658b6
Reviewed-on: https://chromium-review.googlesource.com/964984
Commit-Queue: Kristian H. Kristensen <hoegsberg@chromium.org>
Reviewed-by: Daniel Nicoara <dnicoara@chromium.org>
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545124}
Former-commit-id: 258ff091cc20abbd1b34b6833684ccfd5b1024d4